--- a/package.json
+++ b/package.json
@@ -72,40 +72,40 @@
     "@types/node": "^8.0.47",
     "@types/promise.prototype.finally": "^2.0.2",
     "chart.js": "^2.7.2",
+    "com-darryncampbell-cordova-plugin-intent": "^1.1.0",
+    "cordova-android-support-gradle-release": "^1.4.4",
+    "cordova-clipboard": "^1.2.1",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-badge": "^0.8.7",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-customurlscheme": "^4.3.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-opener2": "^2.0.19",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-globalization": "^1.11.0",
+    "cordova-plugin-inappbrowser": "^3.0.0",
+    "cordova-plugin-local-notifications-mm": "^1.0.10",
+    "cordova-plugin-media-capture": "^3.0.2",
+    "cordova-plugin-network-information": "^2.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-zip": "^3.1.0",
+    "cordova-sqlite-evcore-extbuild-free": "^0.9.7",
     "font-awesome": "4.7.0",
     "ionic-angular": "^3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "jszip": "^3.1.4",
     "moment": "^2.19.1",
+    "nl.kingsquare.cordova.background-audio": "^1.0.1",
+    "phonegap-plugin-push": "^2.2.3",
     "promise.prototype.finally": "^3.0.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "ts-md5": "^1.2.2",
-    "zone.js": "0.8.26",
-    "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-camera": "^4.0.3",
-    "cordova-plugin-media-capture": "^3.0.2",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-globalization": "^1.11.0",
-    "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-network-information": "^2.0.1",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-clipboard": "^1.2.1",
-    "nl.kingsquare.cordova.background-audio": "^1.0.1",
-    "phonegap-plugin-push": "1.11.1",
-    "cordova-plugin-customurlscheme": "^4.3.0",
-    "ionic-plugin-keyboard": "^2.2.1",
-    "cordova-plugin-zip": "^3.1.0",
-    "cordova-plugin-local-notifications-mm": "^1.0.10",
-    "cordova-plugin-file-opener2": "^2.0.19",
-    "com-darryncampbell-cordova-plugin-intent": "^1.1.0",
-    "cordova-sqlite-evcore-extbuild-free": "^0.9.7",
-    "cordova-plugin-badge": "^0.8.7",
-    "cordova-android-support-gradle-release": "^1.4.4"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
@@ -148,9 +148,6 @@
       "cordova-plugin-splashscreen": {},
       "cordova-clipboard": {},
       "nl.kingsquare.cordova.background-audio": {},
-      "phonegap-plugin-push": {
-        "SENDER_ID": "770545864159"
-      },
       "cordova-plugin-customurlscheme": {
         "URL_SCHEME": "moodlemobile"
       },
@@ -163,7 +160,8 @@
       "cordova-plugin-badge": {},
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "27.1.0"
-      }
+      },
+      "phonegap-plugin-push": {}
     }
   },
   "main": "desktop/electron.js",
