Change Version to 3.5.10 & rename to Magfa ELM

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "magfaapp",
-  "version": "3.5.1",
+  "name": "Magfa ELM",
+  "version": "3.5.10",
   "description": "MAGFA E-Learning Application.",
   "author": {
     "name": "MAGFA",
