--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "app_id" : "com.magfalms.magfaapp",
-    "appname": "magfaapp",
+    "appname": "MagfaELM",
     "desktopappname": "Magfa Desktop",
     "versioncode" : 3510,
     "versionname" : "3.5.10",
