Change login page - Enter URL

--- a/src/config.json
+++ b/src/config.json
@@ -12,12 +12,8 @@
     "demo_sites": {"student": {"url": "https://school.demo.moodle.net", "username": "student", "password": "moodle"}, "teacher": {"url": "https://school.demo.moodle.net", "username": "teacher", "password": "moodle"}},
     "gcmpn": "770545864159",
     "customurlscheme": "moodlemobile",
-    "siteurl": [ {"name": "سایت شرکت مگفا", "url": "https://lms.magfalms.net/"}, 
-			 {"name": "سایت بانک مرکزی", "url": "https://cbi.magfalms.net/"},
-			 {"name": "سایت شرکت ایران خودرو", "url": "https://ikco.magfalms.net/"},
-			 {"name": "سایت شرکت آریاساسول", "url": "http://lms1.aryasasol.com/"}
-    ],
-    "multisitesdisplay": "buttons",
+    "siteurl": "",
+    "multisitesdisplay": "",
     "skipssoconfirmation": false,
     "forcedefaultlanguage": true,
     "privacypolicy": "https://moodle.org/mod/page/view.php?id=8148"
